src/main/java/com/example/lottery/Util/error/IdInvaldException.java
package com.example.lottery.Util.error;

public class IdInvaldException extends Exception{
    public IdInvaldException(String message) {
        super(message);
    }
}
